--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,12 +14,19 @@
 
     <body>
         <div class="bar-presentation">
-            <input type="text">
+            <input 
+                type="text"
+                name="searchBar"
+                id="searchBar"
+                placeholder="Barre de recherche"
+            >
         </div>
-        <div {{ react_component('Hello', { 'fullName': 'YoanDev' }) }}></div>
+        <div {{ react_component('SearchBar', { 'fullName': 'YoanDev' }) }}></div>
         <p>test</p>
         <main>
             {% block body %}{% endblock %}
         </main>
+
+        <div {{ react_component('See') }}></div>
     </body>
 </html>
