--- a/public/pages/scss/base.scss
+++ b/public/pages/scss/base.scss
@@ -56,4 +56,9 @@ $text_color: #cdcdcd;
     span:hover {
         color: #00C6A7;
     }
+
+    table {
+        width: 80%;
+        margin: 0 auto;
+    }
 }
